<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rikkimikki.teledisk.presentation.main.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:text="TeleDisk"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="start|center_vertical"
            android:text="Teledisk"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/magnify_custom" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="start|center_vertical"
            android:text="Phone"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/magnify_custom" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutStorageMain"
                android:layout_width="250dp"
                android:layout_height="160dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_corner_big">

                <TextView
                    android:id="@+id/mainScopeTextViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name_scope_main"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mainScopeTextViewFreeSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="73,9 ГБ"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/mainScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/mainScopeProgressBarFreeSpace"
                    style="@style/SmallProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/mainScopeTextViewTotalSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text=" | 128 ГБ"
                    app:layout_constraintBottom_toTopOf="@+id/mainScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toEndOf="@+id/mainScopeTextViewFreeSpace" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="160dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_corner_big"
                android:id="@+id/constraintLayoutStorageTd">

                <TextView
                    android:id="@+id/teleDiskScopeTextViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name_scope_teledisk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/teleDiskScopeTextViewFreeSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="73,9 ГБ"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/teleDiskScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/teleDiskScopeProgressBarFreeSpace"
                    style="@style/SmallProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/teleDiskScopeTextViewTotalSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text=" | ∞ ГБ"
                    app:layout_constraintBottom_toTopOf="@+id/teleDiskScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toEndOf="@+id/teleDiskScopeTextViewFreeSpace" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutStorageSd"
                android:layout_width="250dp"
                android:layout_height="160dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_corner_big">

                <TextView
                    android:id="@+id/sdScopeTextViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name_scope_sd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sdScopeTextViewFreeSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="73,9 ГБ"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/sdScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/sdScopeProgressBarFreeSpace"
                    style="@style/SmallProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/sdScopeTextViewTotalSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text=" | 128 ГБ"
                    app:layout_constraintBottom_toTopOf="@+id/sdScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toEndOf="@+id/sdScopeTextViewFreeSpace" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="160dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/constraintLayoutStorageVk"
                android:background="@drawable/rounded_corner_big">

                <TextView
                    android:id="@+id/vkScopeTextViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name_scope_vk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vkScopeTextViewFreeSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    tools:text="73,9 ГБ"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/vkScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/vkScopeProgressBarFreeSpace"
                    style="@style/SmallProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/vkScopeTextViewTotalSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text=" | 128 ГБ"
                    app:layout_constraintBottom_toTopOf="@+id/vkScopeProgressBarFreeSpace"
                    app:layout_constraintStart_toEndOf="@+id/vkScopeTextViewFreeSpace" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        app:alignmentMode="alignBounds"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:rowCount="1"
        app:rowOrderPreserved="false">

        <LinearLayout
            android:id="@+id/textViewTopPanelImages"
            style="@style/cardFilterLinearLayout">

            <ImageView
                style="@style/cardFilterImageView"
                app:srcCompat="@drawable/image_custom__3_"
                android:contentDescription="@string/filter_archives"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_images"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_zero"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textViewTopPanelVideo"
            style="@style/cardFilterLinearLayout">

            <ImageView
                style="@style/cardFilterImageView"
                app:srcCompat="@drawable/video_custom"
                android:contentDescription="@string/filter_video"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_video"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_zero"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textViewTopPanelMusic"
            style="@style/cardFilterLinearLayout">

            <ImageView
                style="@style/cardFilterImageView"
                app:srcCompat="@drawable/music_note_custom"
                android:contentDescription="@string/filter_music"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_music"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_zero"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textViewTopPanelDocs"
            style="@style/cardFilterLinearLayout">

            <ImageView
                style="@style/cardFilterImageView"
                app:srcCompat="@drawable/file_document_custom__1_"
                android:contentDescription="@string/filter_docs"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_docs"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_zero"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textViewTopPanelApps"
            style="@style/cardFilterLinearLayout">

            <ImageView
                style="@style/cardFilterImageView"
                app:srcCompat="@drawable/android_custom"
                android:contentDescription="@string/filter_apks"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_apks"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_zero"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textViewTopPanelArchives"
            style="@style/cardFilterLinearLayout">

            <ImageView
                style="@style/cardFilterImageView"
                app:srcCompat="@drawable/archive_custom"
                android:contentDescription="@string/filter_archives"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_archives"/>

            <TextView
                style="@style/cardFilterTextView"
                android:text="@string/filter_zero"/>
        </LinearLayout>



    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>